# neschan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  neschan.sln
dep/blip_buf/: blip_buf.txt  demo.c  demo_chip.c  demo_fixed.c  demo_log.txt  demo_sdl.c  demo_stereo.c  readme.txt  wave_writer.c  wave_writer.h
lib/: CMakeLists.txt  neschanlib.vcxproj  neschanlib.vcxproj.filters  stdafx.cpp  stdafx.h
lib/inc/: common.h  cpu.h  memory.h  nes_apu.h  nes_component.h  nes_cpu.h  nes_cycle.h  nes_input.h  nes_mapper.h  nes_memory.h  nes_ppu.h  nes_system.h  nes_trace.h  trace.h
lib/src/: cpu.cpp  nes_apu.cpp  nes_cpu.cpp  nes_input.cpp  nes_mapper_mmc3.cpp  nes_memory.cpp  nes_ppu.cpp  nes_system.cpp
lib/src/mappers/: nes_mapper_474.cpp  nes_mapper_mmc1.cpp  nes_mapper_nrom.cpp
src/: neschan.cpp  neschan.rc  neschan.vcxproj  neschan.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
test/: CMakeLists.txt  cpu_test.cpp  instruction-tests.cpp  ppu_test.cpp  stdafx.cpp  stdafx.h  test.cpp  test.vcxproj  test.vcxproj.filters
test/roms/nestest/: nestest.baseline  nestest.out
